# sk5

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  clash-direct.yaml  clash-min.yaml  clash.yamil  clash.yaml  docker-compose.yml
.github/workflows/: docker-ghcr.yml
src/: main.rs
